# mandelbrot-core

./: Cargo.toml
src/: mandelbrot.rs
